--- a/server/default_templates/default_email_notify_otp.html
+++ b/server/default_templates/default_email_notify_otp.html
@@ -1,10 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Your Login Token</title>
-    </head>
-    <body>
-        <h2>Hi {{username}} Use this code to log in: {{callback_token}}</h2>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your GFT Login Token</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            width: 100%;
+            max-width: 600px;
+            margin: 0 auto;
+            background-color: #ffffff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        .header {
+            background-color: #4CAF50;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+            border-radius: 8px 8px 0 0;
+        }
+        .header h1 {
+            margin: 0;
+            font-size: 24px;
+        }
+        .content {
+            padding: 20px;
+            text-align: center;
+        }
+        .content h2 {
+            color: #333333;
+        }
+        .token {
+            font-size: 1.5em;
+            color: #4CAF50;
+            background-color: #f9f9f9;
+            border: 1px solid #ddd;
+            padding: 10px;
+            margin: 20px 0;
+            display: inline-block;
+            border-radius: 4px;
+        }
+        .footer {
+            text-align: center;
+            padding: 10px 0;
+            color: #777777;
+            font-size: 0.9em;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <h1>GFT</h1>
+        </div>
+        <div class="content">
+            <h2>Hi {{username}},</h2>
+            <p>Use this code to log in to GFT:</p>
+            <div class="token">{{callback_token}}</div>
+        </div>
+        <div class="footer">
+            <p>If you did not request this token, please ignore this email.</p>
+        </div>
+    </div>
+</body>
 </html>
